--- a/css/jquery.drawer.css
+++ b/css/jquery.drawer.css
@@ -66,11 +66,11 @@
   display: table;
   clear: both;
 }
-.plg-drawer-menu .plg-menu li a:first-child > i.plg-drawer-icon {
+.plg-drawer-menu .plg-menu li a:first-child > .plg-drawer-icon {
   margin-top: -19px;
   position: absolute;
   top: 50%;
-  left: 15px;
+  left: 20px;
 }
 .plg-drawer-menu .plg-menu li ul {
   list-style-type: none;
@@ -136,6 +136,9 @@
   padding-left: 60px;
   padding-right: 30px;
 }
+.plg-drawer-menu.plg-collapsed .plg-menu li a:first-child > .plg-drawer-icon {
+  left: 15px;
+}
 .plg-drawer-menu.plg-collapsed .plg-menu .plg-item-name, .plg-drawer-menu.plg-collapsed .plg-menu .plg-collapse-toggle {
   opacity: 1;
 }
@@ -154,4 +157,34 @@
   top: 10px;
   right: auto;
   left: 15px;
+}
+
+@media (max-width: 600px) {
+  .plg-drawer-menu {
+    width: 45px;
+    padding-left: 5px;
+  }
+  .plg-drawer-menu .plg-drawer-toggle-trigger {
+    padding: 8px;
+    font-size: .8em;
+    position: absolute;
+    top: 10px;
+    right: 10px;
+  }
+  .plg-drawer-menu .plg-menu li a:first-child {
+    font-size: .9em;
+  }
+  .plg-drawer-menu .plg-menu li a:first-child > .plg-drawer-icon {
+    margin-top: -14px;
+    left: 10px;
+    font-size: 2em;
+  }
+
+  .plg-drawer-menu.plg-collapsed {
+    width: 200px;
+  }
+  .plg-drawer-menu.plg-collapsed .plg-menu li ul li a:first-child {
+    padding-top: 10px;
+    padding-left: 30px;
+  }
 }
